background cut off fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,14 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url('./assets/background.jpg');
-  overflow: hidden;
+  background-size: cover;
   background-repeat: no-repeat;
-  margin: 0;
+  background-position: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
